# firewheel_repo_windows

./: .gitattributes  CHANGELOG.md  CONTRIBUTING.rst  COPYRIGHT.md  DISCLAIMER.md  LICENSE  README.rst  SECURITY.md  pyproject.toml  tox.ini
.github/: release-drafter.yml
.github/workflows/: linting.yml  pr-title-checker.yml  python-publish.yml  release-drafter.yml  update-changelog.yml
src/firewheel_repo_windows/base_windows_objects/: MANIFEST  README.rst  create_powershell_wrapper.ps1  model_component_objects.py
src/firewheel_repo_windows/base_windows_objects/vm_resources/: add_remote_desktop_user.bat  autologon.ps1  change_password.ps1  check_email.ps1  cleanup.ps1  configure_ips.ps1  create_smb_share.ps1  disable_smbv1.ps1  enable_file_sharing.ps1  enable_rdp.ps1  grant_smb_access.ps1  manage_network_share.ps1  rearm_windows.ps1  remove_autologon.ps1  run_smb_gen.ps1  run_task.ps1  set_hostname.ps1  smb_traffic_gen.ps1  wget.ps1
src/firewheel_repo_windows/configure_domain/: MANIFEST  README.rst  plugin.py
src/firewheel_repo_windows/configure_domain/vm_resources/: add_activedirectory_users.ps1  change_password.ps1  install_domain_controller.ps1  join_windows_domain.ps1
src/firewheel_repo_windows/firefox/: MANIFEST  README.rst  plugin.py
src/firewheel_repo_windows/images/domain_controller/: MANIFEST  README.rst  model_component_objects.py
src/firewheel_repo_windows/images/domain_controller/vm_resources/: add_OU.ps1  add_ad_group.ps1  add_ad_user_to_group.ps1  add_domain_site_subnet.ps1  add_users_to_adgroup.ps1  create_bidirectional_trust.ps1  create_conditional_forwarder.bat  join_child_windows_domain.ps1  move_ad_objects.ps1  remove_ad_user.ps1  remove_domain_site_subnet.ps1  reset_trust.ps1
src/firewheel_repo_windows/images/exchange_server/: MANIFEST  README.rst  model_component_objects.py
src/firewheel_repo_windows/images/exchange_server/vm_resources/: add_mailboxes.ps1  install_exchange_server.ps1  prep_exchange.ps1  run_add_mailboxes.ps1  run_exchange_installation.ps1
src/firewheel_repo_windows/images/windows_10_enterprise/: MANIFEST  README.rst  model_component_objects.py
src/firewheel_repo_windows/images/windows_7_enterprise/: CHANGELOG  MANIFEST  README.rst  model_component_objects.py
src/firewheel_repo_windows/images/windows_server_2008_r2_sp1/: MANIFEST  README.rst  model_component_objects.py
src/firewheel_repo_windows/images/windows_server_2012_r2/: MANIFEST  README.rst  model_component_objects.py
src/firewheel_repo_windows/tests/router_tree/: MANIFEST  README.rst  plugin.py
src/firewheel_repo_windows/tests/vm_gen/: MANIFEST  README.rst  plugin.py
src/firewheel_repo_windows/tests/windows_domain/: MANIFEST  README.rst  plugin.py
src/firewheel_repo_windows/tests/windows_trusts/: MANIFEST  README.rst  plugin.py
src/firewheel_repo_windows/windows_utils/: MANIFEST  README.rst  plugin.py
